<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">gMission</string>
    <string name="content_column">Content</string>
    <string name="page_referrers">Referrers</string>
    <string name="refresh_action">Refresh</string>
    <string name="logout_action">Logout</string>
    <string name="page_news">News</string>
    <string name="page_users">Users</string>
    <string name="page_checkins">Check In\'s</string>
    <string name="title_column">Title</string>
    <string name="location_column">Location</string>
    <string name="user_column">User</string>
    <string name="date_column">Date</string>
    <string name="error_loading_users">Loading users failed</string>
    <string name="error_loading_news">Loading news failed</string>
    <string name="error_loading_checkins">Loading check-ins failed</string>
    <string name="no_users">No Users</string>
    <string name="no_news">No News</string>
    <string name="no_campaign">No Campaign</string>
    <string name="no_message">No Message</string>
    <string name="avatar">Avatar</string>
    <string name="choose">Choose</string>

    <!-- AuthenticatorActivity -->
    <string name="label_user_name">User Name</string>
    <string name="label_email_address">Email Address</string>
    <string name="label_password">Password (min: 6 characters)</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_sign_up">Register</string>
    <string name="label_sign_out">Logout</string>
    <string name="label_register">Register</string>
    <string name="label_reject">Reject</string>
    <string name="label_submit">Submit</string>

    <string name="message_signing_in">Signing in…</string>
    <string name="blank_field_warning">Please populate this field</string>
    <string name="signup_link">New to Bootstrap? &lt;a href=http://www.androidbootstrap.com>Click here&lt;/a> to learn more.</string>
    <string name="message_bad_credentials">Email Address or Password is incorrect</string>
    <string name="message_auth_failed">Please enter a valid password</string>
    <string name="message_auth_failed_new_account">Please enter a valid email address &amp; password</string>

    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="home">Home</string>
    <string name="loading">Loading...</string>
    <string name="refreshing">Refreshing...</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="title_campaign">Campaign</string>
    <string name="title_home">Home Page</string>
    <string name="title_logout">Log Out</string>
    <string name="title_message">Messages</string>
    <string name="title_map">Map</string>
    <string name="message_reg_error">Register failed, please try again.</string>
    <string name="message_signing_up">Signing up…</string>
    <string name="register_check_password_same">You\'ll need to type in your password a second time to confirm it.</string>
    <string name="register_check_email">Invalid email address.</string>
    <string name="register_check_name">Invalid Name (at least 6 characters).</string>
    <string name="register_check_passwd">Invalid Password (at least 6 characters).</string>
    <string name="title_activity_bootstrap_account_register">BootstrapAccountRegisterActivity</string>

    <string name="network_error_message">Network error, please try later.</string>
    <string name="unauthorized_error_message">Fail to authorize, please login again.</string>
    <string name="title_activity_hit_list">Question List</string>
    <string name="title_activity_hit">Answer Question</string>


<string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>