<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical" >

    <!--<TextView-->
        <!--android:id="@+id/tv_signup"-->
        <!--style="@style/ShadowText"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@drawable/stripe_repeat"-->
        <!--android:gravity="center"-->
        <!--android:padding="5dp"-->
        <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
        <!--android:textColor="@color/text"-->
        <!--android:textColorLink="@color/text_link" />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp" >

            <TextView
                style="@style/ShadowText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/label_user_name"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text" />

            <AutoCompleteTextView
                android:id="@+id/et_username"
                style="@style/SignInEditText"
                android:completionThreshold="1"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:nextFocusDown="@+id/et_password" />

            <TextView
                style="@style/ShadowText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:text="@string/label_password"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text" />

            <EditText
                android:id="@+id/et_password"
                style="@style/SignInEditText"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:password="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/ShadowText"
                android:gravity="center"
                android:padding="5dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text"
                android:id="@+id/tv_notice" />

            <Button
                android:id="@+id/b_signin"
                style="@style/ShadowText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_background_states"
                android:gravity="center"
                android:padding="10dp"
                android:enabled="false"
                android:text="@string/label_sign_in"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/b_register"
                style="@style/ShadowText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_background_states"
                android:gravity="center"
                android:onClick="handleRegister"
                android:padding="10dp"
                android:text="@string/label_register"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>