<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical" >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                style="@style/ShadowText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_user_name"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text" />

            <EditText
                style="@style/SignInEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="@dimen/text_small_body"
                android:nextFocusDown="@+id/et_email"/>

            <TextView
                style="@style/ShadowText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:text="@string/label_email_address"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text" />

            <AutoCompleteTextView
                style="@style/SignInEditText"
                android:id="@+id/et_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/text_small_body"
                android:nextFocusDown="@+id/et_password" />


            <TextView
                style="@style/ShadowText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:text="@string/label_password"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text" />
            <EditText
                style="@style/SignInEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textSize="@dimen/text_small_body"
                android:nextFocusDown="@+id/et_password2"/>


            <TextView
                style="@style/ShadowText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:text="@string/label_password_again"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text" />
            <EditText
                style="@style/SignInEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_password2"
                android:textSize="@dimen/text_small_body"
                android:imeOptions="actionDone"
                android:inputType="textPassword"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:gravity="bottom">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/ShadowText"
                android:gravity="center"
                android:padding="5dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text"
                android:id="@+id/tv_notice" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="?android:attr/listDivider"
                />

            <Button
                android:id="@+id/b_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_background_states"
                android:gravity="center"
                android:onClick="handleReg"
                android:padding="10dp"
                android:text="@string/label_sign_up"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:enabled="false"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>